--- a/foursquaresearch/templates/foursquaresearch/imlookingfor.html
+++ b/foursquaresearch/templates/foursquaresearch/imlookingfor.html
@@ -8,20 +8,24 @@
         </div>
 
         <div>
-          <form action="/imlookingfor/" method="post">
-            {% csrf_token %}
+          {% block content %}
+          <form method="POST" class="post-form">{% csrf_token %}
             {{ form }}
-            <input type="submit" value="OK" />
+            <button type="submit" class="save btn btn-default">OK</button>
           </form>
+          {% endblock %}
         </div>
 
         <div>
             <h2>Results</h2>
         </div>
-
         <div>
             <h2>Previous Searches</h2>
-            {{ previous_searches }}
+            {% for item in history %}
+            <div>
+              <p>{{ item.search_key }} kobuluk</p>
+            </div>
+            {% endfor %}
         </div>
     </body>
 </html>
