--- a/foursquaresearch/templates/foursquaresearch/imlookingfor.html
+++ b/foursquaresearch/templates/foursquaresearch/imlookingfor.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <h1>The Ultimate Foursquare Client</h1>
+            <h1><a href=/>The Ultimate Foursquare Client</a></h1>
         </div>
         <div>
           {% block content %}
