Favorites, search history and logout buttons are in dropdown

--- a/foursquaresearch/templates/foursquaresearch/imlookingfor.html
+++ b/foursquaresearch/templates/foursquaresearch/imlookingfor.html
@@ -16,6 +16,9 @@
         {% for venue in venues %}
         <td>{{ venue.name }}</td>
         <td>{{ venue.stats.checkinsCount }}</td>
+        {% if logged_in %}
+        <td>star</td>
+        {% endif %}
         </tr>
         {% endfor %}
       </table>
