--- a/foursquaresearch/templates/foursquaresearch/header.html
+++ b/foursquaresearch/templates/foursquaresearch/header.html
@@ -5,6 +5,8 @@
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
 	       <meta name="viewport" content = "width=device-width, initial-scale=1.0">
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body >
       <div class="row">
@@ -16,11 +18,20 @@
         <div>
           {% if logged_in %}
           <div class="col-sm-1">
-            <h5>Hi, {{ username }} :)</a></h5>
+          <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Hi, {{ username }} :)
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><a href="#">Favorites</a></li>
+              <li><a href="#">Search history</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url 'logout_view' %}">Logout</a></li>
+            </ul>
           </div>
-          <div class="col-sm-1">
-            <h5><a href="{% url 'logout_view' %}">Logout</a></h5>
           </div>
+
           {% elif not logged_in %}
           <div class="col-sm-1">
             <h5><a href={% url 'registration' %}>Register</a></h5>
