Add-Remove Favorite functions, User History Model, Favorites and User History pages added

--- a/foursquaresearch/templates/foursquaresearch/base.html
+++ b/foursquaresearch/templates/foursquaresearch/base.html
@@ -18,6 +18,9 @@
         <div class="row">
         {% block search %}
         {% endblock %}
+        {% block userhistory %}
         {% endblock %}
-    </body>
-</html>
+        {% block favorites %}
+        {% endblock %}
+        </div>
+        {% endblock %}
