--- a/foursquaresearch/templates/foursquaresearch/imlookingfor.html
+++ b/foursquaresearch/templates/foursquaresearch/imlookingfor.html
@@ -1,7 +1,7 @@
 {% extends 'foursquaresearch/base.html' %}
 
 {% block search %}
-  {% if search %}
+  {% if is_searched %}
     <div class="col-sm-1">
     </div>
     <div class="col-sm-3">
@@ -16,8 +16,16 @@
         {% for venue in venues %}
         <td>{{ venue.name }}</td>
         <td>{{ venue.stats.checkinsCount }}</td>
+        <td>{{ venue.location.address }}</td>
         {% if logged_in %}
-        <td>star</td>
+        <td>
+          <form action={% url 'add_to_favorites' %} method="post">
+            {% csrf_token %}
+            <input type="hidden" name="name" value="{{ venue.name }}"/>
+            <input type="hidden" name="location" value="{{ venue.location.address }}"/>
+            <button type="submit" class="btn-link">FAV</button>
+          </form>
+        </td>
         {% endif %}
         </tr>
         {% endfor %}
@@ -25,7 +33,7 @@
     </div>
     <div class="col-sm-1">
     </div>
-    {% elif not search %}
+    {% elif not is_searched %}
     <div class="col-sm-1">
     </div>
     <div class="col-sm-4">
