--- a/foursquaresearch/templates/foursquaresearch/favorites.html
+++ b/foursquaresearch/templates/foursquaresearch/favorites.html
@@ -5,26 +5,42 @@
     </div>
     <div class="col-sm-3">
       <h3>Favorite Places<br></h3>
+      <div>
       <table class="table table-bordered">
         <tr>
           <th>Place</th>
           <th>Address</th>
         </tr>
         <tr>
-        {% for fav in favs %}
-        <td>{{ fav.place.name }}</td>
-        <td>{{ fav.place.location }}</td>
+        {% for favorite in favorites %}
+        <td>{{ favorite.place.name }}</td>
+        <td>{{ favorite.place.location }}</td>
         <td>
           <form action={% url 'remove_from_favorites' %} method="post">
             {% csrf_token %}
-            <input type="hidden" name="name" value="{{ fav.place.name }}"/>
-            <input type="hidden" name="location" value="{{ fav.place.location }}"/>
+            <input type="hidden" name="id" value="{{ favorite.place.id }}"/>
             <button type="submit" class="btn-link">DEL</button>
           </form>
         </td>
         </tr>
         {% endfor %}
       </table>
+    </div>
+    <div class="pagination">
+      <span class="step-links">
+          {% if favorites.has_previous %}
+              <a href="?page={{ favorites.previous_page_number }}">previous</a>
+          {% endif %}
+
+          <span class="current">
+              Page {{ favorites.number }} of {{ favorites.paginator.num_pages }}.
+          </span>
+
+          {% if favorites.has_next %}
+              <a href="?page={{ favorites.next_page_number }}">next</a>
+          {% endif %}
+      </span>
+    </div>
     </div>
     <div class="col-sm-1">
     </div>
