Previous search bug fixed. Pagination impoved

--- a/foursquaresearch/templates/foursquaresearch/favorites.html
+++ b/foursquaresearch/templates/foursquaresearch/favorites.html
@@ -1,17 +1,17 @@
 {% extends 'foursquaresearch/base.html' %}
 
 {% block favorites %}
-    <div class="col-sm-1">
-    </div>
-    <div class="col-sm-3">
-      <h3>Favorite Places<br></h3>
-      <div>
-      <table class="table table-bordered">
-        <tr>
-          <th>Place</th>
-          <th>Address</th>
-        </tr>
-        <tr>
+<div class="col-sm-1">
+</div>
+<div class="col-sm-3">
+  <h3>Favorite Places<br></h3>
+  <div>
+    <table class="table table-bordered">
+      <tr>
+        <th>Place</th>
+        <th>Address</th>
+      </tr>
+      <tr>
         {% for favorite in favorites %}
         <td>{{ favorite.place.name }}</td>
         <td>{{ favorite.place.location }}</td>
@@ -22,26 +22,35 @@
             <button type="submit" class="btn-link">DEL</button>
           </form>
         </td>
-        </tr>
-        {% endfor %}
-      </table>
-    </div>
-    <div class="pagination">
-      <span class="step-links">
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+  <div class="pagination">
+    <span class="step-links">
+      <table>
+        <tr>
           {% if favorites.has_previous %}
-              <a href="?page={{ favorites.previous_page_number }}">previous</a>
+          <td><a href="?page={{ favorites.previous_page_number }}">previous</a></td>
           {% endif %}
-
-          <span class="current">
-              Page {{ favorites.number }} of {{ favorites.paginator.num_pages }}.
-          </span>
+          {% for page in num_pages %}
+          <td>
+            {% if page == favorites.number %}
+            <span class="current">{{page}}</span>
+            {% else %}
+            <span class="other-page"><a href="?page={{ page }}">{{ page }}</a></span>
+            {% endif %}
+          </td>
+          {% endfor %}
 
           {% if favorites.has_next %}
-              <a href="?page={{ favorites.next_page_number }}">next</a>
+          <td><a href="?page={{ favorites.next_page_number }}">next</a></td>
           {% endif %}
-      </span>
-    </div>
-    </div>
-    <div class="col-sm-1">
-    </div>
+        </tr>
+      </table>
+    </span>
+  </div>
+</div>
+<div class="col-sm-1">
+</div>
 {% endblock %}
