--- a/foursquaresearch/templates/foursquaresearch/header.html
+++ b/foursquaresearch/templates/foursquaresearch/header.html
@@ -1,4 +1,4 @@
-"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Foursquare Ultima</title>
@@ -48,4 +48,3 @@
       {% endblock %}
     </body>
 </html>
-"
