--- a/foursquaresearch/templates/foursquaresearch/base.html
+++ b/foursquaresearch/templates/foursquaresearch/base.html
@@ -1,42 +1,53 @@
 {% extends 'foursquaresearch/header.html' %}
 {% include "search-history.html" %}
 
-        {% block body %}
-        <div class="row">
-          <div class="col-sm-1">
-          </div>
-          <div class="col-sm-5">
-            <center>
-            <br><br>
-            <form class="form-inline" action="{% url 'index' %}" method="get">
-              <input type="text" name="look_for" placeholder= "I am looking for...">
-              <input type="text" name="location" placeholder= "Location">
-              <button type="submit" class="btn btn-primary">OK</button>
-            </form>
-            </center>
-          </div>
-        </div>
-        <div class="row">
-        {% block search %}
-        {% endblock %}
-        {% block favorites %}
-        {% endblock %}
-        {% block prev_searches %}
-        <div class="col-sm-2">
-          <center>
-            <h3>Previous Searches<br></h3>
-          <table class="table table-striped">
+{% block body %}
+<div class="row">
+  <div class="col-sm-1">
+  </div>
+  <div class="col-sm-5">
+    <center>
+      <br><br>
+      <form class="form-inline" action="{% url 'index' %}" method="get">
+        <input type="text" name="look_for" placeholder= "I am looking for...">
+        <input type="text" name="location" placeholder= "Location">
+        <button type="submit" class="btn btn-primary">OK</button>
+      </form>
+    </center>
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+</div>
+<div class="row">
+  {% block search %}
+  {% endblock %}
+  {% block favorites %}
+  {% endblock %}
+  {% block prev_searches %}
+  <div class="col-sm-2">
+    <center>
+      <h3>Previous Searches<br></h3>
+      <table class="table table-striped">
 
-            {% for h in history|slice:":5" %}
-            <tr>
-              <td>{{ h.search_key }}</td>
-              <td>in</td>
-              <td>{{ h.search_location }}</td>
-            </tr>
-            {% endfor %}
-          </table>
-          </center>
-        </div>
-        {% endblock %}
-        </div>
-        {% endblock %}
+        {% for h in history|slice:":5" %}
+        <tr>
+          <form action="{% url 'index' %}" method="get">
+            <input type="hidden" name="look_for" value="{{ h.search_key }}"/>
+            <input type="hidden" name="location" value="{{ h.search_location }}"/>
+          <td><button type="submit" class="btn-link">{{ h.search_key }}</button></td>
+          <td><button type="submit" class="btn-link">in</button></td>
+          <td><button type="submit" class="btn-link">{{ h.search_location }}</button>
+          </form></td>
+        </tr>
+        {% endfor %}
+      </table>
+    </center>
+  </div>
+  {% endblock %}
+</div>
+{% endblock %}
