--- a/foursquaresearch/templates/foursquaresearch/login.html
+++ b/foursquaresearch/templates/foursquaresearch/login.html
@@ -16,7 +16,9 @@
           <td>{{ form.password.label_tag }}</td>
           <td>{{ form.password }}</td>
         </div>
-
+        <div>
+          <h6><a href="{% url 'password_reset' %}">Forget your password?</a></h6>
+        </div>
         <div>
           <input type="submit" value="login" />
           <input type="hidden" name="next" />
