--- a/foursquaresearch/templates/foursquaresearch/header.html
+++ b/foursquaresearch/templates/foursquaresearch/header.html
@@ -3,6 +3,8 @@
 <head>
   <title>Foursquare Ultima</title>
   {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
+    {% block stylesheet %}{% endblock %}
 </head>
 <body >
   <header>
@@ -45,12 +47,10 @@
     {% endblock %}
     {% block error %}
     {% endblock %}
-    <div class="col-sm-1">
-    </div>
     {% block content %}
     {% endblock %}
   </main>
-</footer>
+<footer>
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type = "text/css"/>
 <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -62,5 +62,8 @@ jQuery(document).ready(function($) {
   });
 });
 </script>
+<script src="{% static 'js/app.js' %}"></script>
+{% block javascript %}{% endblock %}
+</footer>
 </body>
 </html>
