--- a/foursquaresearch/templates/registration/password_reset_form.html
+++ b/foursquaresearch/templates/registration/password_reset_form.html
@@ -1,11 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'foursquaresearch/header.html' %}
 
 {% block content %}
+<div class="col-sm-1">
+</div>
+<div class="col-sm-4">
   <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
-
     {{ form.as_p }}
-    <button type="submit">zdfsdfs</button>
+    <button type="submit">Reset my password</button>
   </form>
+</div>
 {% endblock %}
