--- a/foursquaresearch/templates/500.html
+++ b/foursquaresearch/templates/500.html
@@ -9,7 +9,7 @@
   <div class="col-sm-5">
       <h1><a href=/>Something went wrong!</a></h1>
       Sorry everybody make mistakes :(<br><br>
-      <iframe width="640" height="360" src="https://www.youtube.com/embed/hh7gQhNFzlc" frameborder="0" allowfullscreen></iframe>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/wzGENjrUuWg" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 {% endblock %}
