--- a/foursquaresearch/templates/registration/password_reset_complete.html
+++ b/foursquaresearch/templates/registration/password_reset_complete.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'foursquaresearch/header.html' %}
 
 {% block content %}
+<div class="col-sm-1">
+</div>
+<div class="col-sm-4">
   <p>
-    Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.
+    Your password has been set. You may go ahead and <a href="{% url 'login_view' %}">sign in</a> now.
   </p>
+</div>
 {% endblock %}
