--- a/foursquaresearch/templates/registration/password_reset_done.html
+++ b/foursquaresearch/templates/registration/password_reset_done.html
@@ -1,6 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'foursquaresearch/header.html' %}
 
 {% block content %}
+<div class="col-sm-1">
+</div>
+<div class="col-sm-4">
   <p>
     We've emailed you instructions for setting your password, if an account exists with the email you entered.
     You should receive them shortly.
@@ -9,4 +12,5 @@
     If you don't receive an email, please make sure you've entered the address you registered with,
     and check your spam folder.
   </p>
+</div>
 {% endblock %}
